<?xml version="1.0"?>
<package format="2">
  <name>kxr_cube_solver</name>
  <version>0.0.0</version>
  <description>The kxr_cube_solver package</description>

  <maintainer email="fkanehiro@gmail.com">iori</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roseus</depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>sgd_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
